Fix layout shifting - lock flip-container width to 140px (longest word width)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,7 @@ body {
 
 .flip-container {
   display: inline-block;
-  min-width: 160px;
+  width: 140px;
   height: 1.2em;
   vertical-align: bottom;
   text-align: center;
